# dmgr

./: AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix
src/: cli.rs  editor.rs  entry.rs  init.rs  lib.rs  main.rs
tests/: cli.rs
