[package]
name = "dmgr"
version = "0.1.2"
edition = "2024"

[lib]
name = "dmgr"

[[bin]]
name = "dmgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
